# liboffkv

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE-APACHE  LICENSE-MIT  README.md
env-tests/: Dockerfile-template  README.md  naming.def.conf  testenv
env-tests/base/: Dockerfile
lib/: version.h.in
liboffkv/: clib.cpp  clib.h  client.hpp  config.h.in  config.hpp.in  consul_client.hpp  error.hpp  errors.hpp  etcd_client.hpp  key.hpp  liboffkv.hpp  ping_sender.hpp  util.hpp  version.hpp.in  zk_client.hpp
src/: client.hpp  client_interface.hpp  consul_client.hpp  error.hpp  etcd_client.hpp  key.hpp  operation.hpp  playground.cpp  result.hpp  test.cpp  time_machine.hpp  util.hpp  zk_client.hpp
src/tests/: CMakeLists.txt  gtests.cpp  stress_tests.cpp  test_client_fixture.hpp  time_machine.cpp  unite_tests.cpp
src/util/: time_machine.hpp
tests/: .gitignore  CMakeLists.txt  connection_tests.cpp  single_client_connection.hpp  stress_tests.cpp  test_client_fixture.hpp  test_consul  testenv.hpp  time_machine.cpp  unit_tests.cpp  unit_tests_main.cpp
travis/: bootstrap_consul.sh  bootstrap_etcd.sh  bootstrap_zk.sh  export_tree.sh  export_vcpkg_logs.sh  locate_vcpkg_cmake.sh  prepare_vcpkg.sh  send_status_message.sh
vcpkg/ports/curl/: 0001_cmake.patch  0002_fix_uwp.patch  portfile.cmake
vcpkg/ports/etcdpp/: CMakeLists.txt  CONTROL  portfile.cmake
vcpkg/ports/ppconsul/: CONTROL  cmake_build.patch  portfile.cmake
vcpkg/ports/zkpp/: CMakeInstall.txt  CONTROL  portfile.cmake
vcpkg/ports/zookeeper-mt/: CMakeLists.txt  portfile.cmake
